test/lattests/extensions/objects1/bad/nullCastToNonexistentType.lat
int main() {
    int x = (a)null;
    return 0;
}